src/test/ui/derives/deriving-meta-unknown-trait.rs
#[derive(Eqr)]
//~^ ERROR cannot find derive macro `Eqr` in this scope
struct Foo;

pub fn main() {}
